# Olio-Ohjelmointi

Olio-Ohjelmointi/Tehtävät/EXTRATEHTÄVÄT/Extra1_LuokkaJaOlio/: CMakeLists.txt  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO1/VkoT1/: CMakeLists.txt  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO1/VkoT2/: CMakeLists.txt  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO2/Vko2T1-3/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO3/Vko3T1/: CMakeLists.txt  Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO4/: Asiakas.cpp  Asiakas.h  Luottotili.cpp  Luottotili.h  Pankkitili.cpp  Pankkitili.h  main.cpp
Olio-Ohjelmointi/Tehtävät/VKO5/Tehtava/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
